tests/enum/tenumitems.nim
discard """
  errormsg: "attempting to call routine: 'items'"
  line: 7
"""

type a = enum b,c,d
a.items()
